crates/plotnik-tests/tests/03-analyze/predicates/string_escape_bad_unicode.txt
Q = (identifier == "a\u{d800}b")
------------------ DIAGNOSTICS -------------------
error: invalid unicode escape
 --> query.ptk:1:22
  |
1 | Q = (identifier == "a\u{d800}b")
  |                      ^^^^^^^^
  |
help: write `\u{…}` with 1-6 hex digits naming a Unicode scalar value
------------------ DEFINITIONS -------------------
